order_page.css
html,
body {
    height: 100%;
}

table > tbody > tr {
    height: 30px !important;
}

table > tbody > tr > td,
table > tbody > tr > td > div {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    font-size: 9pt !important;
    height: 30px !important;
}

td > a > div > div {
    line-height: 2;
}

.h-300 {
    height: 300px !important;
}

.full-height {
    height: 100vh;
}

.order_panel {
    position: relative;
}

.icon-expand-d, .icon-expand-c, .icon-expand-e {
    position: absolute;
    top: 12px;
    right: 12px;
    z-index: 10; 
}

.icon-expand-e-top {
    top: 14px;
}

.icon-contract-d, .icon-contract-c, .icon-contract-e {
    position: absolute;
    top: 12px;
    right: 12px;
    z-index: 10;
}

.inner_panel {
    position: absolute;
    top: 0;
    left: 0;
}

.order-panel-A {
    /* background-color: blueviolet; */
    overflow-y: auto;
    height: 300px;
}
.order-panel-B {
    /* background-color: burlywood; */
    overflow-y: auto;
    height: 276px;
}

.order-panel-C {
    /* background-color: bisque;
    height: 30vh; */
}

.order-panel-D {  
    /* background-color: aqua;
    height: 30vh; */
}

.order-panel-E {  
    overflow-y: auto;
    /* background-color: aliceblue;
    height: 200vh; */
}

.overflow-panel {
    max-height: 60vh;
    overflow-y: hidden;
}

.overflow-panel-E {
    max-height: 92vh;
    overflow-y: hidden;
}

.panelC-show-more, .panelD-show-more, .panelE-show-more {
    text-align: center;
    color: rgb(80,80,80)
}

.panelC-show-less, .panelD-show-less, .panelE-show-less {
    text-align: center;
    color: rgb(80,80,80)
}

